fixed image display issue for safari (images not showing on first load with empty caches)

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -26,10 +26,6 @@ div {
     padding: 0;
 }
 
-.displayNone {
-    display: none;
-}
-
 .is-invisible {
     opacity: 0;
 }
